its crossplatform now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0.2)
 
 project(CSPlayer)
 
+set(CMAKE_CXX_STANDARD 17)
+
 set(source src/main_miniaudio.cpp)
 
 add_executable(CSPlayer ${source})
